src/objects/MMPLANS__c.object
<CustomObject>
    <description>(MBI) - MMD - Plan Sponsor - Plan information</description>
    <fields>
        <fullName>ANN_CONTRIB_LOC__c</fullName>
        <label>Annual Contributions (Local Curr)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ANN_CONTRIB__c</fullName>
        <label>Annual Contributions ($000)</label>
        <precision>15</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASSETACON__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asset Allocation Study</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASSETS_LOC__c</fullName>
        <label>Plan Assets (Local Curr)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASSETS__c</fullName>
        <label>Plan Assets ($000)</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CURR_CODE__c</fullName>
        <label>Local Currency Conversion Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ELIGIBLE__c</fullName>
        <label>Eligible Employees</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FUNDED__c</fullName>
        <label>Amt Short Of or Over PBO</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Firm_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Firm Link</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>MMD_Pension_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Firm_Name__c</fullName>
        <formula>$Organization.Country</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Firm Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <label>MMD ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INTRATE__c</fullName>
        <label>Assumed Interest Rate</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LIABILITIES_LOC__c</fullName>
        <label>Liabilities (Local Curr)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LIABILITIES__c</fullName>
        <label>Liabilities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MFS_Managed__c</fullName>
        <formula>IF( MFS_Mgr_Count__c &gt;0,TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MFS Managed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MFS_Mgr_Count__c</fullName>
        <label>MFS Mgr Count</label>
        <summarizedField>MMMGR__c.MFS_Mgr__c</summarizedField>
        <summaryForeignKey>MMMGR__c.MMD_Pension_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MGRSCON__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manager Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MMD_Firm_Profile__c</fullName>
        <label>MMD Firm Profile</label>
        <referenceTo>MMCOMP__c</referenceTo>
        <relationshipName>MMD_Pension_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>NAIC__c</fullName>
        <label>NAIC</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PARTICIPANTS__c</fullName>
        <label>Participants</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PDIRECT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Participant Directed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PERFECON__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Performance Evaluation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PLANID__c</fullName>
        <label>Plan ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLAN_NAME__c</fullName>
        <label>Plan Name</label>
        <length>130</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLAN_TYPE__c</fullName>
        <label>Plan Type Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Lookup__c</fullName>
        <formula>ID__c &amp; lpad(SEQ_NO__c ,3,&apos;0&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Lookup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Type_Desc__c</fullName>
        <formula>CASE( PLAN_TYPE__c ,
&quot;0300&quot;,&quot;Hybrid DB/DC Plan&quot;,
&quot;0322&quot;,&quot;Cash Balance Plan&quot;,
&quot;0360&quot;,&quot;Defined Benefit Plan&quot;,
&quot;0361&quot;,&quot;Closed or Frozen DB Plan&quot;,
&quot;0362&quot;,&quot;Target Benefit&quot;,
&quot;0364&quot;,&quot;Generic DC or Profit Sharing&quot;,
&quot;0367&quot;,&quot;Money Purchase Plan&quot;,
&quot;0375&quot;,&quot;Thrift &amp; Savings Plan&quot;,
&quot;0376&quot;,&quot;401(k) Plan&quot;,
&quot;0377&quot;,&quot;Stock Plan&quot;,
&quot;0378&quot;,&quot;Tax Deferred Annuity&quot;,
&quot;0379&quot;,&quot;Keogh Plan&quot;,
&quot;0399&quot;,&quot;Investment Pool Funds&quot;,
&quot;0400&quot;,&quot;Foundation Fund&quot;,
&quot;0401&quot;,&quot;Government 401(a) Plan&quot;,
&quot;0403&quot;,&quot;403(b) Plan&quot;,
&quot;0444&quot;,&quot;Nuclear Decommissioning Fund&quot;,
&quot;0457&quot;,&quot;457 Deferred Compensation Plan&quot;,
&quot;0500&quot;,&quot;Endowment Fund&quot;,
&quot;0501&quot;,&quot;VEBA Health &amp; Welfare Plan&quot;,
&quot;0502&quot;,&quot;University/College Life Income &amp; Annuity Funds&quot;,
&quot;0529&quot;,&quot;529 College Savings Plan&quot;,
&quot;0600&quot;,&quot;Sovereign Wealth Fund&quot;,
&quot;0800&quot;,&quot;Other Tax-exempt Fund&quot;,
&quot;0801&quot;,&quot;Tobacco Settlement Trust&quot;,
&quot;0802&quot;,&quot;Workers Compensation Fund&quot;,
&quot;0804&quot;,&quot;Local/State Investment Funds&quot;,
&quot;0900&quot;,&quot;Other Retirement Fund&quot;,
&quot;300&quot;,&quot;Hybrid DB/DC Plan&quot;,
&quot;322&quot;,&quot;Cash Balance Plan&quot;,
&quot;360&quot;,&quot;Defined Benefit Plan&quot;,
&quot;361&quot;,&quot;Closed or Frozen DB Plan&quot;,
&quot;362&quot;,&quot;Target Benefit&quot;,
&quot;364&quot;,&quot;Generic DC or Profit Sharing&quot;,
&quot;367&quot;,&quot;Money Purchase Plan&quot;,
&quot;375&quot;,&quot;Thrift &amp; Savings Plan&quot;,
&quot;376&quot;,&quot;401(k) Plan&quot;,
&quot;377&quot;,&quot;Stock Plan&quot;,
&quot;378&quot;,&quot;Tax Deferred Annuity&quot;,
&quot;379&quot;,&quot;Keogh Plan&quot;,
&quot;399&quot;,&quot;Investment Pool Funds&quot;,
&quot;400&quot;,&quot;Foundation Fund&quot;,
&quot;401&quot;,&quot;Government 401(a) Plan&quot;,
&quot;403&quot;,&quot;403(b) Plan&quot;,
&quot;444&quot;,&quot;Nuclear Decommissioning Fund&quot;,
&quot;457&quot;,&quot;457 Deferred Compensation Plan&quot;,
&quot;500&quot;,&quot;Endowment Fund&quot;,
&quot;501&quot;,&quot;VEBA Health &amp; Welfare Plan&quot;,
&quot;502&quot;,&quot;University/College Life Income &amp; Annuity Funds&quot;,
&quot;529&quot;,&quot;529 College Savings Plan&quot;,
&quot;600&quot;,&quot;Sovereign Wealth Fund&quot;,
&quot;800&quot;,&quot;Other Tax-exempt Fund&quot;,
&quot;801&quot;,&quot;Tobacco Settlement Trust&quot;,
&quot;802&quot;,&quot;Workers Compensation Fund&quot;,
&quot;804&quot;,&quot;Local/State Investment Funds&quot;,
&quot;900&quot;,&quot;Other Retirement Fund&quot;,
&quot;1165&quot;,&quot;1165E Savings Plan for Puerto Rico&quot;,
&quot;5360&quot;,&quot;DB Multinational Consolidated Plan&quot;,
&quot;5364&quot;,&quot;DC Multinational Consolidated Plan&quot;,
&quot;5900&quot;,&quot;Hybrid DB/DC Multinational Consolidated Plan&quot;,
PLAN_TYPE__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SELFDIRECT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Self-Directed Brokerage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SEQ_NO__c</fullName>
        <label>Plan Sequence #</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VALDATE__c</fullName>
        <label>Asset Valuation Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>MMD Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Link</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MMD Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>